--- a/testing/Nucleo/STM32CubeIDE/.project
+++ b/testing/Nucleo/STM32CubeIDE/.project
@@ -83,6 +83,16 @@
 			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_hal.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/STM32WLxx_HAL_Driver/stm32wlxx_hal_adc.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_hal_adc.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32WLxx_HAL_Driver/stm32wlxx_hal_adc_ex.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_hal_adc_ex.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/STM32WLxx_HAL_Driver/stm32wlxx_hal_cortex.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_hal_cortex.c</locationURI>
@@ -173,6 +183,11 @@
 			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_hal_uart_ex.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/STM32WLxx_HAL_Driver/stm32wlxx_ll_adc.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Drivers/STM32WLxx_HAL_Driver/Src/stm32wlxx_ll_adc.c</locationURI>
+		</link>
+		<link>
 			<name>Middlewares/SubGHz_Phy/lr_fhss_mac.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Middlewares/Third_Party/SubGHz_Phy/stm32_radio_driver/lr_fhss_mac.c</locationURI>
@@ -196,6 +211,11 @@
 			<name>Middlewares/SubGHz_Phy/wl_lr_fhss.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Middlewares/Third_Party/SubGHz_Phy/stm32_radio_driver/wl_lr_fhss.c</locationURI>
+		</link>
+		<link>
+			<name>Application/User/Core/adc.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/Core/Src/adc.c</locationURI>
 		</link>
 		<link>
 			<name>Application/User/Core/dma.c</name>
