--- a/project/tracker.kibot.yaml
+++ b/project/tracker.kibot.yaml
@@ -2,9 +2,13 @@ kibot:
   version: 1
 
 variants:
-  - name: "Tracker"
-    comment: "Regular Tracker PCB"
+  - name: "Full"
+    comment: "Full Tracker PCB"
     type: kibom
+  - name: "Minimal"
+    comment: "Reduced tracker PCB without serial interface"
+    type: kibom
+    variant: Minimal
 
 global:
   out_dir: "../production/Export-%D"
@@ -40,6 +44,20 @@ outputs:
       format: png
       bottom: true
       output: "PCB_Bottom.%x"
+
+  - name: "Generate Drill"
+    comment: "Generate drill files"
+    type: excellon
+    dir: gerber
+    options:
+      metric_units: true
+      mirror_y_axis: false
+      pth_and_npth_single_file: false
+      left_digits: 0
+      minimal_header: false
+      use_aux_axis_as_origin: true
+      route_mode_for_oval_holes: true
+      zeros_format: "DECIMAL_FORMAT"
 
   - name: "Generate Gerbers"
     comment: "Generate Gerbers"
@@ -197,7 +215,7 @@ outputs:
     options:
       format: ZIP
       files:
-        - source: gerber
+        - source: gerber/**
       output: "Gerber_%D.%x"
 
   - name: "ZIP Centroid"
@@ -207,7 +225,7 @@ outputs:
     options:
       format: ZIP
       files:
-        - source: centroid
+        - source: centroid/**
       output: "Centroid_%D.%x"
 
   - name: "Step file"
