Working on version 1
Hardware:
- Finalize PCB
- Replace expensive components with cheaper ones
- Add GPS antenna

--- a/project/tracker.kibot.yaml
+++ b/project/tracker.kibot.yaml
@@ -188,7 +188,7 @@ outputs:
     options:
       format: XLSX
       count_smd_tht: true
-      output: "BOM.%x"
+      output: "BOM_PCBWay.%x"
       ref_separator: ','
       columns:
         - field: Row
