Working on version 1
Hardware:
- Finalize PCB
- Replace expensive components with cheaper ones
- Add GPS antenna

Firmware Testing:
- Add GPS configuration
- Add STOP mode sleep

Signed-off-by: Daniel Kampert <DanielKampert@kampis-elektroecke.de>

--- a/project/tracker.kibot.yaml
+++ b/project/tracker.kibot.yaml
@@ -20,15 +20,28 @@ global:
   date_format: "%Y-%m-%d"
 
 outputs:
+  - name: "Naviagation results"
+    comment: "Create navigation results page"
+    type: navigate_results
+    dir: "overview"
+
+  - name: "Download datasheets"
+    comment: "Download component datasheets"
+    type: download_datasheets
+    dir: docs/datasheets
+    category: "documentation"
+
   - name: "Generate IBOM"
     comment: "Interactive Bill of Materials"
     type: ibom
     dir: docs
+    category: "documentation"
 
   - name: "Print Schematics"
     comment: "Print schematic (PDF)"
     type: pdf_sch_print
     dir: docs
+    category: "documentation"
     options:
       output: Schematic.%x
 
@@ -36,6 +49,7 @@ outputs:
     comment: "Top layer view"
     type: pcbdraw
     dir: docs/images
+    category: "documentation"
     options:
       format: png
       bottom: false
@@ -45,6 +59,7 @@ outputs:
     comment: "Bottom layer view"
     type: pcbdraw
     dir: docs/images
+    category: "documentation"
     options:
       format: png
       bottom: true
@@ -54,6 +69,7 @@ outputs:
     comment: "Generate drill files"
     type: excellon
     dir: gerber
+    category: "production"
     options:
       metric_units: true
       mirror_y_axis: false
@@ -68,6 +84,7 @@ outputs:
     comment: "Generate Gerbers"
     type: gerber
     dir: gerber
+    category: "production"
     options:
       exclude_edge_layer: false
       exclude_pads_from_silkscreen: false
@@ -134,6 +151,7 @@ outputs:
     comment: "Pick & Place"
     type: position
     dir: centroid
+    category: "production"
     options:
       format: ASCII
       only_smd: false
@@ -142,6 +160,7 @@ outputs:
     comment: "PCB Specifications"
     type: pcb_print
     dir: docs
+    category: "production"
     options:
       output: "PCB.pdf"
       format: PDF
@@ -156,6 +175,7 @@ outputs:
     comment: "Ref Top"
     type: pcb_print
     dir: docs
+    category: "purchasing"
     options:
       output: "Ref_Top.%x"
       format: PDF
@@ -170,6 +190,7 @@ outputs:
     comment: "Ref Bottom"
     type: pcb_print
     dir: docs
+    category: "purchasing"
     options:
       output: "Ref_Bot.%x"
       format: PDF
@@ -185,6 +206,7 @@ outputs:
     comment: "BOM for PCBWay"
     type: bom
     dir: docs
+    category: "purchasing"
     options:
       format: XLSX
       count_smd_tht: true
@@ -216,8 +238,9 @@ outputs:
 
   - name: "ZIP Gerber"
     comment: "ZIP Gerber"
-    dir: .
     type: compress
+    dir: .
+    category: "purchasing"
     options:
       format: ZIP
       files:
@@ -226,8 +249,9 @@ outputs:
 
   - name: "ZIP Centroid"
     comment: "ZIP Centroid"
-    dir: .
     type: compress
+    dir: .
+    category: "purchasing"
     options:
       format: ZIP
       files:
@@ -238,11 +262,13 @@ outputs:
     comment: "STEP file generation"
     type: step
     dir: cad
+    category: "mechanical"
 
   - name: "3D rendering"
     comment: "3D rendering"
     type: render_3d
     dir: docs/images
+    category: "documentation"
     options:
       ray_tracing: true
       rotate_x: 3
